RESOLVED FIXED46649
REGRESSION: fast/css/text-overflow and fast/block/basic/016.html failing on bots
https://bugs.webkit.org/show_bug.cgi?id=46649
Summary REGRESSION: fast/css/text-overflow and fast/block/basic/016.html failing on bots
Dave Hyatt
Reported 2010-09-27 13:30:28 PDT
REGRESSION: fast/css/text-overflow and fast/block/basic/016.html failing on bots.
Attachments
Patch (18.58 KB, patch)
2010-09-27 14:50 PDT, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2010-09-27 14:50:49 PDT
Dave Hyatt
Comment 2 2010-09-27 14:56:34 PDT
Fixed in r68427.
Note You need to log in before you can comment on or make changes to this bug.