WebCore/rendering/RenderObject.h
@@ -688,7 +688,6 @@ public:
      */
     virtual IntRect localCaretRect(InlineBox*, int caretOffset, int* extraWidthToEndOfLine = 0);
 
-    virtual void computeBlockDirectionMargins() { }
     bool isTopMarginQuirk() const { return m_topMarginQuirk; }
     bool isBottomMarginQuirk() const { return m_bottomMarginQuirk; }
     void setTopMarginQuirk(bool b = true) { m_topMarginQuirk = b; }
