WebCore/rendering/style/RenderStyle.h
@@ -600,6 +600,8 @@ public:
     Length marginEnd() const;
     Length marginStartUsing(const RenderStyle* otherStyle) const;
     Length marginEndUsing(const RenderStyle* otherStyle) const;
+    Length marginBeforeUsing(const RenderStyle* otherStyle) const;
+    Length marginAfterUsing(const RenderStyle* otherStyle) const;
 
     LengthBox paddingBox() const { return surround->padding; }
     Length paddingTop() const { return surround->padding.top(); }
